--- a/phinx.yml
+++ b/phinx.yml
@@ -1,6 +1,6 @@
 paths:
     migrations: '%%PHINX_CONFIG_DIR%%/db/migrations'
-    seeds: '%%PHINX_CONFIG_DIR%%/db/seeds'
+    seeds: '%%PHINX_CONFIG_DIR%%/db/seeder'
 
 environments:
     default_migration_table: migrations
