--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "robmorgan/phinx": "^0.9.2",
         "twig/twig": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
-        "vlucas/valitron": "^1.4"
+        "vlucas/valitron": "^1.4",
+        "illuminate/database": "^5.6"
     },
     "autoload": {
         "psr-4": {
