--- a/phinx.yml
+++ b/phinx.yml
@@ -10,7 +10,7 @@ environments:
         host: localhost
         name: UpnpPord
         user: root
-        pass: 'root'
+        pass: ''
         port: 3306
         charset: utf8
 
@@ -19,7 +19,7 @@ environments:
         host: localhost
         name: upnp
         user: root
-        pass: 'root'
+        pass: ''
         port: 3306
         charset: utf8
 
