--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,21 @@
 {
-    "require": {
-        "cicada/cicada": "@stable",
-        "php-activerecord/php-activerecord": "^1.2",
-        "robmorgan/phinx": "^0.9.2",
-        "twig/twig": "^2.0",
-        "guzzlehttp/guzzle": "^6.3",
-        "vlucas/valitron": "^1.4",
-        "illuminate/database": "^5.6",
-        "php": "~7.0.10 | ^7.2.4"
+  "require": {
+    "cicada/cicada": "@stable",
+    "php-activerecord/php-activerecord": "^1.2",
+    "robmorgan/phinx": "^0.9.2",
+    "twig/twig": "^2.0",
+    "guzzlehttp/guzzle": "^6.3",
+    "vlucas/valitron": "^1.4",
+    "illuminate/database": "^5.6",
+    "php": "~7.0.10 | ^7.2.4"
+  },
+  "autoload": {
+    "psr-4": {
+      "Upnp\\": "src/",
+      "UpnpTest\\": "tests/"
     },
-    "autoload": {
-        "psr-4": {
-            "Upnp\\": "src/",
-            "UpnpTest\\": "tests/"
-        },
-        "files": ["vendor/vlucas/valitron/src/Valitron/Validator.php"]
-    }
+    "files": [
+      "vendor/vlucas/valitron/src/Valitron/Validator.php"
+    ]
+  }
 }
