--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "require": {
     "cicada/cicada": "@stable",
+    "phpmailer/phpmailer": "~5.2.9",
     "php-activerecord/php-activerecord": "^1.2",
     "robmorgan/phinx": "^0.9.2",
     "twig/twig": "^2.0",
